# crucible

./: .env.example  .gitignore  Makefile  README.md  SYSTEM_DESIGN.md  pyproject.toml
crucible/: __init__.py  agent.py  config.py  metrics.py  offline.py  retrieval.py  rubric.py  tools.py  tracing.py
crucible/agents/: __init__.py  judge.py  pipeline.py  researcher.py  reviser.py
crucible/corpus/: lab_notes.md  papers.json
crucible/eval/: __init__.py  dataset.py  report.py  runner.py
tests/: test_agent_discovery.py  test_metrics.py  test_pipeline_offline.py  test_report.py  test_retrieval.py  test_rubric.py  test_tools.py
