[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crucible-adk"
version = "0.1.0"
description = "A multi-agent evaluation forge on Google ADK: a ReAct researcher, a self-reflection reviser, and an LLM-as-judge, with an offline mode and an eval harness."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "google-adk>=2.1,<3",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
crucible-eval = "crucible.eval.runner:main"

[tool.setuptools]
packages = ["crucible", "crucible.agents", "crucible.eval"]

[tool.setuptools.package-data]
crucible = ["corpus/*.json", "corpus/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:SequentialAgent is deprecated:DeprecationWarning",
]
